--- a/index.html
+++ b/index.html
@@ -26,21 +26,28 @@
                 <div id="" class="col-sm-12 col-md-6 mt-4 bg-light">
                     <div id="" class="text-center">
                         <h4 class="text-center all-input">Income</h4>
+
                         <span class="all-input">Income:</span>
                         <input id="montley-salary" type="number">
+
                         <h4 class="text-center all-input my-3">Expenses</h4>
                         <span class="all-input p-lg-2">Food:</span>
                         <input id="food-money" type="number"><br><br>
+
                         <span class="all-input p-lg-2">Rent:</span>
                         <input id="rom-money" type="number"><br><br>
+
                         <span class="all-input p">Clothes:</span>
                         <input id="clother-money" type="number"><br><br>
+
                         <button id="calcule-btn" class="all-input text-white mx-auto">Calculate</button><br><br>
-                        <span class="all-input">Total Expenses:</span><span id="west-money"></span><br><br>
-                        <span class="all-input">Balance:</span><span id="extra-money"></span><br><br>
+
+                        <span class="all-input">Total Expenses :</span><span id="west-money"></span><br><br>
+                        <span class="all-input">Balance :</span><span id="extra-money"></span><br><br>
+
                         <span class="all-input">Save: <input id="saving-input" type="number"> % </span><button id="saving-btn" class="all-input text-white">Save</button><br><br>
-                        <span id="saving-amount-show" class="all-input">Saving Amount:</span><span id="extra-money"></span><br><br>
-                        <span  class="all-input">Remaining Balance:</span><span id="extra-money"></span><br><br>
+                        <span id="saving-amount-show" class="all-input">Saving Amount:</span><span id="saving-money"></span><br><br>
+                        <span  class="all-input">Remaining Balance:</span><span id="last-money"></span><br><br>
                     </div>
                 </div>
             </div>
