--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div id="" class="container">
             <div id="" class="row">
-                <h1 id="" class="text-center color-red mt-5">Save Money For Your Live</h1>
+                <h1 id="" class="text-center color-red mt-5">Matir Band Calcultor</h1>
                 <!-- images div  -->
                 <div id="" class="col-sm-12 col-md-6 mt-4">
                     <div id="" class="">
